--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,7 +10,7 @@
     <color name="red">#C62828</color>
     <color name="green">#2E7D32</color>
     <color name="blue">#1565C0</color>
-    <color name="yellow">#FFEB3B</color>
+    <color name="purple">#8100A5</color>
     <color name="orange">#D84315</color>
     <color name="any">#808080</color>
 </resources>
