--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,10 +21,22 @@
             android:layout_weight="1"
             android:gravity="center"
             android:paddingTop="@dimen/largeSeparator"
-            android:paddingBottom="@dimen/largeSeparator"
+            android:paddingBottom="@dimen/dividerPadHeight"
             android:textColor="@color/white"
             android:textSize="@dimen/textSize"
             tools:text="Jour $today : $currentUser" />
+
+        <TextView
+            android:id="@+id/modeTextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center_horizontal"
+            android:paddingTop="@dimen/dividerPadHeight"
+            android:paddingBottom="@dimen/largeSeparator"
+            android:textColor="@color/white"
+            android:textSize="@dimen/textSize"
+            tools:text="@string/text_toggle1" />
 
         <TextView
             android:id="@+id/textViewPurple"
