--- a/app/src/main/res/drawable-anydpi/minus_1.xml
+++ b/app/src/main/res/drawable-anydpi/minus_1.xml
@@ -4,7 +4,7 @@
     android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24"
-    android:tint="#A6A6A6">
+    android:tint="#FFFFFF">
   <group android:scaleX="0.14493984"
       android:scaleY="0.14493984"
       android:translateX="2.72385">
