Fetch user list from gist instead of using static array

--- a/app/src/main/res/menu/actionbar.xml
+++ b/app/src/main/res/menu/actionbar.xml
@@ -38,4 +38,11 @@
         android:title="@string/actionbar_toggle1"
         android:visible="true"
         app:showAsAction="ifRoom" />
+    <item
+        android:id="@+id/refresh_actionbar"
+        android:enabled="true"
+        android:icon="@android:drawable/ic_popup_sync"
+        android:title="@string/actionbar_refresh"
+        android:visible="true"
+        app:showAsAction="ifRoom" />
 </menu>
